<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/titulolist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/cadastro_de_task_text"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/titulolist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/nome_register_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/descricao_register_task"
        android:textColorHint="@color/white"
        android:layout_below="@id/nameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tagInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/descInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/tipo_de_tarefa_register_task"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_below="@id/tagInput"
        android:layout_marginHorizontal="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:text="@string/salvar_button_register_task"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

</RelativeLayout>