<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/sign_in_title"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/subTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/login_instrucoes_text"
        android:textSize="17dp"
        android:layout_marginBottom="150dp"/>

    <RelativeLayout
        android:id="@+id/loginInputs"
        android:layout_below="@id/subTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/insira_seu_email_input"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/passInput"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passInput"
            android:hint="@string/insira_sua_senha_input"
            android:layout_below="@id/emailInput"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:password="true"
            tools:ignore="Deprecated"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInputs"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="Login"
        android:textSize="20dp" />



</RelativeLayout>